--- a/src/app/{components}/shots-section/ShotsSection.module.scss
+++ b/src/app/{components}/shots-section/ShotsSection.module.scss
@@ -8,10 +8,11 @@
 }
 
 .title {
+  font-size: 22px;
+  font-family: "Rajdhani", cursive;
+  margin-bottom: 30px;
+  font-weight: bold;
   text-align: center;
-  font-size: 18px;
-  font-family: "Rye", cursive;
-  margin-bottom: 40px;
 }
 
 .pics_container {
