--- a/src/app/{components}/services-section/ServicesSection.module.scss
+++ b/src/app/{components}/services-section/ServicesSection.module.scss
@@ -14,19 +14,20 @@
 }
 
 .section_title {
-  text-align: center;
   color: $primary-text-color;
-  font-size: 14px;
-  font-family: "Rye", cursive;
+  font-size: 20px;
+  font-family: "Rajdhani", cursive;
   text-transform: uppercase;
   margin-bottom: 30px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .title {
+  font-size: 22px;
+  font-family: "Rajdhani", cursive;
+  font-weight: bold;
   text-align: center;
-  font-size: 18px;
-  font-family: "Rye", cursive;
-  margin-bottom: 40px;
 }
 
 .services_container {
@@ -41,9 +42,9 @@
   height: 300px;
   background-color: $secondary-button-color;
   padding: 20px;
+  margin-top: 30px; // For hovering
   opacity: 0; // For reveal on scroll
-
-  transition: opacity 1s; // For reveal on scroll
+  transition: opacity 1s, margin 0.5s; // For reveal on scroll
 }
 
 .service_icon {
@@ -53,15 +54,16 @@
 }
 
 .service_title {
-  font-family: "Rye", cursive;
-  font-size: 15px;
+  font-family: "Rajdhani", cursive;
+  font-size: 20px;
+  font-weight: bold;
   text-transform: capitalize;
   margin-bottom: 20px;
 }
 
 .service_description {
-  font-family: "roboto";
-  font-size: 14px;
+  font-family: "Rajdhani";
+  font-size: 16px;
   line-height: 20px;
 }
 
@@ -77,13 +79,32 @@
   font-weight: bold;
   text-transform: uppercase;
   align-self: center;
+  transition: transform 0.5s, background-color 0.5s;
 }
 
 @import "./{styles}/ServicesSection.1024mx.module.scss";
 @import "./{styles}/ServicesSection.768mx.module.scss";
 @import "./{styles}/ServicesSection.500mx.module.scss";
 
-// Temp class
+/*
+ * -----------------------------------  Temp class  ------------------------------------------------------------
+ */
 .reveal {
   opacity: 1;
+}
+
+/*
+ * -----------------------------------  Pseudo classes & selectors  --------------------------------------------
+ */
+/* To prevent Hovering effects on click in Mobile / Touch enabled devices*/
+@media (hover: hover) {
+  .service_card:hover {
+    margin-top: 15px; // decreasing from 25 to 20. so that it'll go upside when hovering
+  }
+
+  .menu_call_to_action_but:hover {
+    // padding: 25px 20px;
+    transform: scale(1.1);
+    background-color: rgb(215, 57, 0);
+  }
 }
